src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --orb: #ffffff;
  --accent: #fed823;
  --accent-hover: #fed950;
  --primary: #15a1fc;
  --secondary: #ff7bed;
  --tertiary: #01feb6;
  --formal-accent: #efecd6;
  --formal-accent-dimmed: #efecd680;
  --light-grey: #8899a6;
  --half-grey: #505050;

  --error: #ff7b83;
  --error-dark: #3e1b1e;
  --red-background: #ff416140;

  --primary-dark: #0d0030;
  --primary-semi-dark: #17093d;
  --primary-bright: #01f5ff;
  --primary-light: #bff5fa;
  --primary-dimmed: #3a00d6;
  --primary-semi-dimmed: #4b61d5;
  --primary-background: #1a0259;
  --primary-dark-red: #210030;
  --secondary-dimmed: #cf6aff;
  --secondary-dark: #30223e;
  --secondary-semi-dark: #4d3664;

  --accent-light-transparent: #fed82369;
  --secondary-light-transparent: #ff7bed69;
  --accent-light-active-transparent: #fed8239e;
  --secondary-light-active-transparent: #ff7bed9e;
  --formal-accent-light-transparent: #efecd6cc;
  --primary-semi-dimmed-transparent: #3a00d640;

  --accent-light-transparent: rgba(178, 249, 116, 0.4);
  --accent-semi-transparent: rgba(254, 216, 35, 0.4);
  --primary-semi-transparent: rgba(21, 161, 252, 0.5);
  --secondary-semi-transparent: rgba(255, 123, 237, 0.5);
  --tertiary-semi-transparent: rgba(1, 254, 182, 0.4);
  --formal-accent-semi-transparent: rgba(239, 236, 214, 0.4);
  --light-formal-accent: rgba(239, 236, 214, 0.15);
  --error-semi-transparent: rgba(255, 123, 131, 0.2);
  --selection: #ff7bed35;
  --divider: #353945;
  --transparent: #00000000;

  --accent-transparent: #fed8231a;
  --secondary-transparent: #ff7bed1a;
  --primary-dark-transparent: #0d00304d;

  --bg-grid: conic-gradient(
    from 90deg at 0.06rem 0.06rem,
    var(--primary-dark) 90deg,
    var(--primary-background) 0
  );
}

*,
*:focus {
  -webkit-tap-highlight-color: var(--transparent);
  outline: 0;
}

html {
  background-color: var(--primary-dark);
  scrollbar-color: var(--accent) transparent;
  scrollbar-width: thin;
  background-size: 100% auto, 100% auto, 3rem 3rem;
  background-repeat: no-repeat, no-repeat, repeat;
  background-position: top, top, top;
  background-image: url(), url('/img/background.webp'), var(--bg-grid);
  caret-color: var(--primary);
}
html[bg-theme='404'] {
  background-position: top, center, top;
  background-size: auto auto, 100% 100%, 3rem 3rem;
  background-image: url(), url(), var(--bg-grid);
}

@media screen and (max-width: 1280px) {
  html[bg-theme='404'] {
    background-position: top, center, top;
    background-size: auto auto, 100% 100%, 3rem 3rem;
    background-image: url(),
      radial-gradient(var(--red-background), var(--transparent)), var(--bg-grid);
  }
}

body {
  overflow: overlay;
  scroll-behavior: smooth;
  margin: 0;
  min-height: 100vh;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: 'JetBrains Mono', monospace;
  color: var(--formal-accent);
}

@media (hover: hover) and (pointer: fine) {
  .hover-tertiary:hover {
    color: var(--tertiary);
    text-decoration: underline;
  }
  .hover-secondary:hover {
    color: var(--secondary-light-active-transparent);
  }
  .hover-button-scroll:hover {
    opacity: 1;
  }
}

svg:not(.Toastify__toast-icon svg) {
  fill: none;
}
path:not(.walletconnect-qrcode__image path),
circle {
  stroke-linecap: round;
  stroke-linejoin: round;
}

::selection {
  background: var(--selection);
}
::-moz-selection {
  background: var(--selection);
}

/* Scrollbar */
::-webkit-scrollbar {
  width: 15px;
}
::-webkit-scrollbar-thumb {
  background: var(--accent);
  border-radius: 20px;
  background-clip: content-box;
  border: 5px solid transparent;
}
::-webkit-scrollbar-thumb:hover {
  background: var(--accent-hover);
  border-radius: 20px;
  background-clip: content-box;
  border: 4px solid transparent;
}

/* Wallet select menu for dark and light theme */
.web3modal-modal-lightbox {
  z-index: 100 !important;
}

.loading-pause:hover {
  animation-play-state: paused;
}

.double-gradient-shadow {
  position: relative;
  box-shadow: -20px -20px 74px var(--secondary-transparent),
    20px 20px 74px var(--accent-transparent);
}

.animated-border {
  position: relative;
  padding: 0.15rem;
  isolation: isolate;
}
.shadow-card {
  box-shadow: inset 0rem 0rem 0.5rem 0 var(--light-formal-accent);
}

.animated-border::before {
  content: '';
  position: absolute;
  top: -100%;
  left: -100%;
  width: 300%;
  height: 300%;
  z-index: -1;
  background-image: linear-gradient(90deg, #ff7bed, #fed823);
  animation: rotate 12s ease-in-out infinite;
}

.animated-blur {
  position: absolute;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
}
.animated-blur::before {
  position: absolute;
  content: '';
  top: 20%;
  left: 10%;
  height: 80%;
  width: 80%;
  z-index: -2;
  filter: blur(6rem);
  background-image: linear-gradient(90deg, #ff7bed, #fed823);
  animation: rotate 12s ease-in-out infinite;
}

.dots-loading::after {
  content: '';
  animation: dots 3s linear infinite;
}

.break-words {
  word-break: break-word;
}

.stroke-text-secondary {
  -webkit-text-stroke: 2px var(--secondary);
}

@keyframes dots {
  0%,
  20% {
    content: '.';
  }
  40% {
    content: '..';
  }
  60% {
    content: '...';
  }
  90%,
  100% {
    content: '';
  }
}

@keyframes rotate {
  100% {
    transform: rotate(1turn);
  }
}

@media screen and (max-width: 400px) {
  .animated-blur::before {
    top: 8%;
  }
}

@media screen and (max-width: 600px) {
  /* Grid for mobiles */
  html {
    background-color: var(--primary-dark);
    background-size: auto auto, 100% 100%, 0/2rem, 2rem;
    background-position: top, top, 0;
    background-image: url(), url('/img/background.webp'), var(--bg-grid);
  }
  .animated-blur::before {
    top: 30%;
    width: 140%;
  }
}

